force-app/main/default/objects/Price_Audit_BSP__c/Price_Audit_BSP__c.object-meta.xml
<CustomObject>
    <label>Price Audit-BSP</label>
    <nameField>
        <displayFormat>PAR-{00000000}</displayFormat>
        <label>Price Audit Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Audit-BSP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>