force-app/main/default/objects/Price_Audit_BSP__c/fields/Calcualated_BSP__c.field-meta.xml
<CustomField>
    <fullName>Calcualated_BSP__c</fullName>
    <label>Calcualated BSP(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>