force-app/main/default/objects/Price_Audit_BSP__c/fields/CSO__c.field-meta.xml
<CustomField>
    <fullName>CSO__c</fullName>
    <label>CSO(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>