force-app/main/default/objects/Price_Audit_BSP__c/fields/CSP_Eur_100L__c.field-meta.xml
<CustomField>
    <fullName>CSP_Eur_100L__c</fullName>
    <description>Customer Specific Pricing in Euro/100L</description>
    <label>Customer Offset (Eur/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>