force-app/main/default/objects/Price_Audit_BSP__c/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <formula>If(OR(ISPICKVAL(SHT__r.Product_Category__c,&apos;ULG100 VP&apos;),ISPICKVAL(SHT__r.Product_Category__c,&apos;ULG95_BOB_E10&apos;),ISPICKVAL(SHT__r.Product_Category__c,&apos;ULG95_BOB_E5&apos;),ISPICKVAL(SHT__r.Product_Category__c,&apos;ULG95 E0&apos;),ISPICKVAL(SHT__r.Product_Category__c,&apos;ULG95 E10&apos;),ISPICKVAL(SHT__r.Product_Category__c,&apos;ULG95 E5&apos;),ISPICKVAL(SHT__r.Product_Category__c,&apos;ULG98&apos;)),0.755,0.845 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Density</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>