force-app/main/default/objects/Price_Audit_BSP__c/fields/Final_AMV_Euro_Mt__c.field-meta.xml
<CustomField>
    <fullName>Final_AMV_Euro_Mt__c</fullName>
    <label>Final AMV(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>