force-app/main/default/objects/Price_Audit_BSP__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <formula>TEXT(SHT__r.Grade__c)</formula>
    <label>Grade</label>
    <type>Text</type>
</CustomField>