force-app/main/default/objects/Price_Audit_BSP__c/fields/Landed_Cost_Euro_Mt__c.field-meta.xml
<CustomField>
    <fullName>Landed_Cost_Euro_Mt__c</fullName>
    <label>Landed Cost(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>