force-app/main/default/objects/Price_Audit_BSP__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Product_Catalogue__c</referenceTo>
    <relationshipLabel>Price Audit-BSP</relationshipLabel>
    <relationshipName>Price_Audit_BSP</relationshipName>
    <type>Lookup</type>
</CustomField>