force-app/main/default/objects/Price_Audit_BSP__c/fields/Night_Surcharges_Eur_100L__c.field-meta.xml
<CustomField>
    <fullName>Night_Surcharges_Eur_100L__c</fullName>
    <label>Night Surcharges (Eur/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>