force-app/main/default/objects/Price_Audit_BSP__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <formula>SHT__r.Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant</label>
    <type>Text</type>
</CustomField>