force-app/main/default/objects/Price_Audit_BSP__c/fields/Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Margin__c</fullName>
    <label>Sales Margin(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>