force-app/main/default/objects/Price_Audit_BSP__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>20</length>
    <type>Text</type>
</CustomField>