force-app/main/default/objects/Price_Audit_BSP__c/fields/Shipping_Condition__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Condition__c</fullName>
    <label>Shipping Condition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>