force-app/main/default/objects/Price_Audit_BSP__c/fields/SHT__c.field-meta.xml
<CustomField>
    <fullName>SHT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SHT</label>
    <referenceTo>SHT__c</referenceTo>
    <relationshipLabel>Price Audit-BSP</relationshipLabel>
    <relationshipName>Price_Audit_BSP</relationshipName>
    <type>Lookup</type>
</CustomField>