force-app/main/default/objects/Price_Audit_BSP__c/fields/SP_100L__c.field-meta.xml
<CustomField>
    <fullName>SP_100L__c</fullName>
    <formula>SHT__r.SP_100L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP €/100L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>