force-app/main/default/objects/Price_Audit_BSP__c/fields/Throughput_Applied__c.field-meta.xml
<CustomField>
    <fullName>Throughput_Applied__c</fullName>
    <label>Throughput Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>