force-app/main/default/objects/Price_Audit_BSP__c/fields/Throughput_Cost__c.field-meta.xml
<CustomField>
    <fullName>Throughput_Cost__c</fullName>
    <label>Throughput Cost(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>