force-app/main/default/objects/Price_Audit_BSP__c/fields/Union_Fees__c.field-meta.xml
<CustomField>
    <fullName>Union_Fees__c</fullName>
    <label>Union Fees(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>