force-app/main/default/objects/Price_Audit_BSP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mrc_No__c</columns>
    <columns>Calcualated_BSP__c</columns>
    <columns>Calcualated_MSP__c</columns>
    <columns>CSO__c</columns>
    <columns>Depot_Steer__c</columns>
    <columns>Energy_Fees__c</columns>
    <columns>Final_AMV_Euro_100L__c</columns>
    <columns>Final_AMV_Euro_Mt__c</columns>
    <columns>Landed_Cost_Euro_Mt__c</columns>
    <columns>Min_Margin__c</columns>
    <columns>Sales_Margin__c</columns>
    <columns>Throughput_Cost__c</columns>
    <columns>Union_Fees__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SHT__c</field>
        <operation>equals</operation>
        <value>SHT - 298428</value>
    </filters>
    <label>All</label>
</ListView>